# ambience

./: .gitignore  CMakeLists.txt  ambience.sublime-project
src/: env.c  filter.c  filter.h  main.c  osc.h  synth.c  synth.h  voice.c  voice.h
src/core/: CMakeLists.txt  Chromosome.cc  Chromosome.h  Evaluator.h  Evolution.h  Individual.cc  Individual.h  Population.cc  Population.h  Representation.cc  Representation.h  Rules.h
src/cppsynth/: CMakeLists.txt  Env.cc  Env.h  Filter.cc  Filter.h  Osc.cc  Osc.h  Synth.cc  Synth.h  Types.h  Voice.cc  Voice.h
src/frontend/: Frontend.cc  IndividualCreator.h  SynthCreator.h
src/fx/: Delay.h  Effect.h
src/synth/: CMakeLists.txt  SynthWrapper.cc  SynthWrapper.h  env.c  env.h  filter.c  osc.c  types.h
src/util/: Audio.h  ConvenienceMath.h  Types.h
src/wav/: CMakeLists.txt  Codec.cc  Codec.h
